--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <h1 class="gallery-title">Explore Photos</h1>
 
   <div class="gallery">
-    <!-- Your image boxes go here -->
+    <!--  image boxes -->
     <div class="image-box nature"><img src="img/nature/1.jpg" alt="Nature 1" onclick="openLightbox(0)" /></div>
     <div class="image-box code"><img src="img/code/2.jpg" alt="code 1" onclick="openLightbox(1)" /></div>
     <div class="image-box people"><img src="img/people/4.jpg" alt="People 1" onclick="openLightbox(2)" /></div>
@@ -59,7 +59,6 @@
     <div class="image-box animals"><img src="img/animals/10.jpg" alt="animals 10" onclick="openLightbox(2)" /></div>
     <div class="image-box nature"><img src="img/nature/11.jpg" alt="nature 11" onclick="openLightbox(2)" /></div>
     <div class="image-box code"><img src="img/code/31.jpg" alt="code 10" onclick="openLightbox(2)" /></div>
-    <!-- Repeat more image boxes as needed -->
   </div>
 
   <!-- Lightbox -->
@@ -72,11 +71,12 @@
 </div>
   <!-- Footer -->
 <footer>
-  <p>Copyright &copy; 2025 CodeAlpha Internship Project | Designed by <i>Dharmendra Kumar</i></p>
+  <p>Copyright &copy; 2025 Internship Project | Designed by <i>Dharmendra Kumar</i></p>
 </footer>
 
 
   <script src="script.js"></script>
 </body>
 </html>
+
 
